@@ -20,7 +20,8 @@ BBOBImportPage = function(id) {
     shiny::sidebarPanel(
       shiny::fileInput(ns("BBOB_import_file"), label = "File to import"),
       shiny::numericInput(ns("BBOB_import_replication"), label = "Replications", value = 1),
-      shiny::selectInput(ns("BBOB_import_featureSet"),label = "Feature Set", choices = listAvailableFeatureSets()),
+      shiny::selectInput(ns("BBOB_import_featureSet"), label = "Feature Set",
+        choices = c("all Features", listAvailableFeatureSets()), selected = "cm_angle"),
       shiny::textInput(ns("BBOB_block_input"), label = "Blocks (comma sperated per dimension)", value = 2),
       shiny::sliderInput(ns("BBOB_ssize"), "Sample size", min = 10, max = 5000, value = 100),
       shiny::downloadButton(ns('BBOB_import_downloadData'), 'Download')
@@ -70,10 +71,17 @@ BBOBImport = function(input, output, session, stringsAsFactors) {
           feat.object = createFeatureObject(X = X, y = y, fun = f)
         }
         # calculate the features
-        features_l = data.frame(fid = importdata[i, 1L], iid = importdata[i, 2L],
-          dim = importdata[i, 3L], rep = r,
-          calculateFeatureSet(feat.object, set = input$BBOB_import_featureSet,
-            control = list(ela_curv.sample_size = min(200L, feat.object$n.obs))))
+        if (input$BBOB_import_featureSet == "all Features") {
+          features_l = data.frame(fid = importdata[i, 1L], iid = importdata[i, 2L],
+            dim = importdata[i, 3L], rep = r,
+            calculateFeatures(feat.object,
+              control = list(ela_curv.sample_size = min(200L, feat.object$n.obs))))
+        } else {
+          features_l = data.frame(fid = importdata[i, 1L], iid = importdata[i, 2L],
+            dim = importdata[i, 3L], rep = r,
+            calculateFeatureSet(feat.object, set = input$BBOB_import_featureSet,
+              control = list(ela_curv.sample_size = min(200L, feat.object$n.obs))))
+        }
         features = rbind(features, features_l)
       }
     }
