@@ -1,6 +1,7 @@
 flacco_1.6:
 - flaccoGUI:
 -- fixed a bug, which ignored the boundaries of the feature object when plotting the functional, contour or surface plot
+-- enable simultaneous computation of "all features" within BBOB import and Smoof import
 - information content features:
 -- fixed a bug, which returned a useless value for eps.max (it used to return the maximum of the considered epsilon-values)
 
